PFM-274 Fixed error, added option to allow paging
Fixed invisible page arrow error.
Added pagination as a option because it conflicts with row dragging.

--- a/src/app/pfm-coreui/datagrid/datagrid.component.scss
+++ b/src/app/pfm-coreui/datagrid/datagrid.component.scss
@@ -10,7 +10,7 @@
   border-bottom: 0;
 }
 
-.row-limit-container{
+.pagination-container{
   display: flex;
   justify-content: flex-end;
   height: 25px;
